tests/compile_failures/events/named_path_values.rs
use dioxus_sugar::events;

#[events(event = "onclick")]
struct Props {}

fn main() {}